Added forms and tables

--- a/html-css/layouts/positions.html
+++ b/html-css/layouts/positions.html
@@ -9,14 +9,14 @@
       /* body {
         height: 100vh;
       } */
-      h1 {
-        /* default value */
-        /* position: static; */
-        /* relative */
-        /* position: relative;
+      /* h1 {
+         default value 
+         position: static; 
+         relative 
+         position: relative;
         left: 200px;
-        top: 100px; */
-      }
+        top: 100px; 
+      } */
 
       .container {
         height: 500px;
