--- a/javascript/projects/drawpixel/style.css
+++ b/javascript/projects/drawpixel/style.css
@@ -1,24 +1,65 @@
-* {
-    box-sizing: border-box;
-    font-family: 'Press Start 2P', cursive;
-  }
-  
-  html {
-    background-color: #222;
-    color: white;
-  }
-  
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  td {
-    transition: background-color 0.5s ease;
-  }
-  
-  
-  select, button {
-    height: 24px;
-  }
+body {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+}
+header {
+  margin-bottom: 15px;
+}
+button,
+select {
+  min-height: 35px;
+  padding: 10px;
+}
+table {
+  margin: 0 auto;
+}
+button:hover {
+  background-color: aliceblue;
+}
+
+td {
+  background: lightgray;
+  height: 50px;
+  width: 50px;
+  /* margin: 5px; */
+  border: 10px red;
+}
+
+span {
+  background-color: gray;
+  padding: 10px;
+}
+
+/* Colors */
+.red {
+  background-color: red;
+}
+.blue {
+  background-color: blue;
+}
+.orange {
+  background-color: orange;
+}
+.yellow {
+  background-color: yellow;
+}
+.green {
+  background-color: green;
+}
+.indigo {
+  background-color: indigo;
+}
+.voilet {
+  background-color: violet;
+}
+.black {
+  background-color: black;
+}
+.white {
+  background-color: white;
+}
+.brown {
+  background-color: brown;
+}
+/* add more colors of choice */
