--- a/backendWeb/search-gifs/views/home.hbs
+++ b/backendWeb/search-gifs/views/home.hbs
@@ -15,13 +15,13 @@
 {{/if}}
 
 {{#each gifs}}
-    <div style="display: flex; justify-content: center; align-items: center; height: 50vh;">
-    <div style="margin: 10px;">
+    <div class="gif-container">
+    <div >
         <span>Description: {{this.content_description}}</span> <br>
         <span>Link to GIF on Tenor Website: {{this.url}}</span> <br>
         <span>Created On: {{this.created}}</span> <br>
     </div>
-    <img style="margin: 10px; max-width: 100%; max-height: 100%;" src={{this.itemurl}} alt={{this.content_description}}>
+    <img class="gif-image" src={{this.itemurl}} alt={{this.content_description}}>
     <hr>
    </div>   
 {{/each}}
